--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -42,5 +42,13 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="Deploy.ps1" />
+    <None Include="DeployedFail.ps1" />
+    <None Include="PostDeploy.ps1" />
+    <None Include="PreDeploy.ps1" />
+    <None Include="Service.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
