--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -159,6 +159,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Octopus\Deploy.ps1" />
+    <Content Include="Octopus\DeployedFail.ps1" />
+    <Content Include="Octopus\PostDeploy.ps1" />
+    <Content Include="Octopus\PreDeploy.ps1" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -184,6 +188,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Web.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
