--- a/Service/App.config
+++ b/Service/App.config
@@ -1,13 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="policyInvoicingDbConnectionString" connectionString="Data Source=.;Initial Catalog=local_PolicyInvoicing;Integrated Security=true" />
-    <add name="NServiceBus_Foreground/Persistence" connectionString="Data Source=localhost;Initial Catalog=local_PolicyInvoicing_NServiceBus_Foreground;Integrated Security=true" />
+    <add name="databaseConnection" connectionString="Data Source=.;Initial Catalog=local_database;Integrated Security=true" />
   </connectionStrings>
   <appSettings>
-    <add key="Global.ApplicationName" value="PolicyInvoicing.MessagingService" />
-    <add key="Global.ApplicationVersion" value="1.0.0" />
-    <add key="Global.ApplicationLogsFolder" value="c:\waypoint\wip\logs\" />
-    <add key="Global.Environment.Name" value="local" />
+    <add key="SharedSetting" value="ForLocal" />
+    <add key="UniqueSetting" value="ForLocal" />
   </appSettings>
 </configuration>
