--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -160,7 +160,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Octopus\Deploy.ps1" />
-    <Content Include="Octopus\DeployedFail.ps1" />
+    <Content Include="Octopus\DeployFailed.ps1" />
     <Content Include="Octopus\PostDeploy.ps1" />
     <Content Include="Octopus\PreDeploy.ps1" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
