--- a/Web/Web.nuspec
+++ b/Web/Web.nuspec
@@ -11,7 +11,7 @@
   <files>
     <file src="Octopus\PostDeploy.ps1" target="PostDeploy.ps1" />
     <file src="Octopus\Deploy.ps1" target="Deploy.ps1" />
-    <file src="Octopus\DeployedFail.ps1" target="DeployedFail.ps1" />
+    <file src="Octopus\DeployFailed.ps1" target="DeployedFail.ps1" />
     <file src="Octopus\PreDeploy.ps1" target="PreDeploy.ps1" />
     <file src="bin\**" target="" />
   </files>
